ColinFay published a site update

--- a/css.html
+++ b/css.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -369,20 +369,20 @@ What this tag will contain is these three elements:</p>
 </ul>
 <p>The first two are standard: you do not need to change them, they are necessary to indicate to the HTML page that you are creating a stylesheet, with the type being text/css.
 The <code>href</code> is the one you will need to change: this path points to where your style file is located.</p>
-<p>If you are building your application with <code>{golem}</code>, the good news is that this file creation and linking is transparent: if you call <code>golem::add_css_file("name")</code>, a file will be created at <code>inst/app/www</code>, and this file will be automatically linked inside your UI thanks to the <code>bundle_resouces()</code> function.</p>
+<p>If you are building your application with <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span>, the good news is that this file creation and linking is transparent: if you call <code>golem::add_css_file("name")</code>, a file will be created at <code>inst/app/www</code>, and this file will be automatically linked inside your UI thanks to the <code>bundle_resouces()</code> function.</p>
 </div>
 <div id="using-r-packages" class="section level3">
 <h3><span class="header-section-number">8.3.4</span> Using R packages</h3>
 <p>If you want to use external CSS template, there are several packages that exist that can do implement new custom UI designs for your application.
 Here are some:</p>
 <ul>
-<li><p><a href="https://github.com/ColinFay/resume"><code>{resume}</code></a>, provides an implementation of the <a href="https://github.com/BlackrockDigital/startbootstrap-resume">Bootstrap Resume Template</a>.</p></li>
-<li><p><a href="https://github.com/ColinFay/nessy"><code>{nessy}</code></a>, a port of <a href="https://github.com/nostalgic-css/NES.css">NES CSS</a>.</p></li>
-<li><p><a href="https://github.com/ColinFay/skeleton"><code>{skeleton}</code></a>, <a href="http://getskeleton.com/">Skeleton CSS</a>.</p></li>
-<li><p><a href="https://github.com/RinteRface/shinyMobile"><code>{shinyMobile}</code></a>, shiny API for Framework7 (IOS/android).</p></li>
-<li><p><a href="https://github.com/RinteRface/shinydashboardPlus"><code>{shinydashboardPlus}</code></a>, extensions for shinydashboard.</p></li>
-<li><p><a href="https://github.com/RinteRface/bs4Dash"><code>{bs4Dash}</code></a>, Bootstrap 4 shinydashboard using AdminLTE3.</p></li>
-<li><p><a href="https://github.com/RinteRface/fullPage"><code>{fullPage}</code></a>, fullPage.js, pagePiling.js and multiScroll.js for shiny.</p></li>
+<li><p><code>{resume}</code><span class="citation">(<span class="citeproc-not-found" data-reference-id="R-resume"><strong>???</strong></span>)</span>, provides an implementation of the <a href="https://github.com/BlackrockDigital/startbootstrap-resume">Bootstrap Resume Template</a>.</p></li>
+<li><p><code>{nessy}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-nessy"><strong>???</strong></span>)</span>, a port of <a href="https://github.com/nostalgic-css/NES.css">NES CSS</a>.</p></li>
+<li><p><code>{skeleton}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-skeleton"><strong>???</strong></span>)</span>, <a href="http://getskeleton.com/">Skeleton CSS</a>.</p></li>
+<li><p><code>{shinyMobile}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinyMobile"><strong>???</strong></span>)</span>, shiny API for Framework7 (IOS/android).</p></li>
+<li><p><code>{shinydashboardPlus}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinydashboardPlus"><strong>???</strong></span>)</span>, extensions for shinydashboard.</p></li>
+<li><p><code>{bs4Dash}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-bs4Dash"><strong>???</strong></span>)</span>, Bootstrap 4 shinydashboard using AdminLTE3.</p></li>
+<li><p><code>{fullPage}</code><span class="citation">(<span class="citeproc-not-found" data-reference-id="R-fullPage"><strong>???</strong></span>)</span>, fullPage.js, pagePiling.js and multiScroll.js for shiny.</p></li>
 </ul>
 <p>And all the amazing things done at <a href="https://github.com/RinteRface">RinteRface</a>.</p>
 </div>
