--- a/deploy-golem.html
+++ b/deploy-golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -204,7 +204,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Once your app is built, you are ready to deploy it!
 In other words, your software is now ready to be used by other users, be it from
 There are two main ways to share your application and make it available to others: by creating a package and making it installable, or by sending it to a remote server.
-We’ll see in this part how you can do that using <code>{golem}</code>.</p>
+We will see in this part how you can do that using <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span>.</p>
 <div id="before-deployment-check-list" class="section level2">
 <h2><span class="header-section-number">14.1</span> Before deployment Check-list</h2>
 <p>Here is a quick checklist of things to think about once your application is read, and before sending it to production</p>
@@ -247,7 +247,7 @@ Then, try the <code>run_app()</code> function to check that the app can be launc
 <div id="share-as-built-package" class="section level3">
 <h3><span class="header-section-number">14.2.2</span> Share as built package</h3>
 <p>Building an app as a package also means that this app can be bundled into an archive, and then shared, either as is or using a package repository like the CRAN.</p>
-<p>To do that, you first need an bundled version of your app, which can be created using the <code>pkgbuild::build()</code> function in the same working directory as your application.
+<p>To do that, you first need an bundled version of your app, which can be created using the <code>build()</code> function from <code>{pkgbuild}</code> <span class="citation">(Wickham and Hester <a href="#ref-R-pkgbuild" role="doc-biblioref">2020</a>)</span> in the same working directory as your application.
 Calling this function wîll create a .tar.gz file that is called <code>mygolem_0.0.1.tar.gz</code> (of course with the name of your package).
 Once you have this <code>tar.gz</code>, you can send it to your favorite package repository.</p>
 <p>You can also share the file as is with others.
@@ -304,6 +304,12 @@ Otherwise you might have to add them manually.</p>
 
 
 
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-pkgbuild">
+<p>Wickham, Hadley, and Jim Hester. 2020. <em>Pkgbuild: Find Tools Needed to Build R Packages</em>. <a href="https://CRAN.R-project.org/package=pkgbuild">https://CRAN.R-project.org/package=pkgbuild</a>.</p>
+</div>
+</div>
 <hr/>
 <footer>
 <a href="rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
