--- a/golem.html
+++ b/golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="golem" class="section level1">
 <h1><span class="header-section-number">Chapter 4</span> Introduction to <code>{golem}</code></h1>
-<p>The <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> package is a framework for building production-grade Shiny Application.
+<p>The <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> package is a framework for building production-grade Shiny Application.
 Lot of the patterns and methodologies described in this book are linked to <code>{golem}</code> and packages from the <a href="http://golemverse.org/">golemverse</a>.
 Of course, all the advices developed in this book will still be valid even if you are not planning on using <code>{golem}</code>.</p>
 <p>We have quickly introduced <code>{golem}</code> in the last chapter, and we will come back to this package from time to time in the following chapters.
@@ -271,7 +271,7 @@ And for a good readon: a <code>{golem}</code> app IS a package.</p>
 <p>The <code>DESCRIPTION</code> and <code>NAMESPACE</code> are standard package files (<em>i.e.</em> they are not <code>{golem}</code>-specific).
 In <code>DESCRIPTION</code>, you will add a series of metadata about your package, for example who wrote the package, what is the package version, what is its goal, who to complain to if things go wrong, and also information about external dependencies, the license, the encoding…</p>
 <p>This <code>DESCRIPTION</code> file will be filled automatically by the first function you will run in <code>dev/01_start.R</code>, and by other functions from the <code>dev/</code> scripts.
-In other words, most of the time you will not interact with it directly, but through wrappers from <code>{golem}</code> and <code>{usethis}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-usethis"><strong>???</strong></span>)</span> which are listed in the <code>dev</code> scripts.</p>
+In other words, most of the time you will not interact with it directly, but through wrappers from <code>{golem}</code> and <code>{usethis}</code> <span class="citation">(Wickham and Bryan <a href="#ref-R-usethis" role="doc-biblioref">2020</a>)</span> which are listed in the <code>dev</code> scripts.</p>
 <p>The <code>NAMESPACE</code> file is the file you will NEVER edit by hand!
 The <code>NAMESPACE</code> file defines how to interact with the rest of the package: what functions to import and from which package and what functions to export, <em>i.e.</em> what functions are available to the user when you do <code>library(golex)</code>.
 This file will be built when running the documenting process in your R package: <code>{roxygen2}</code> will scan all your <code>.R</code> files, and build the <code>man/</code> + the <code>NAMESPACE</code>, by scanning the roxygen tags there.</p>
@@ -338,7 +338,7 @@ app_ui &lt;- function(request) {
 <p>This piece of the <code>app_ui.R</code> is designed to received the counterpart of what you put in your server.
 Everything here is to be put after the <code> # List the first level UI elements here </code> line.
 Just as with their server counterparts, the UI side of these elements are the one from the bottom of the file you are creating with <code>golem::add_module()</code>.</p>
-<p>By default, <code>{golem}</code> uses a <code>fluidPage()</code>, which is <code>{shiny}</code> most commonly used template.
+<p>By default, <code>{golem}</code> uses a <code>fluidPage()</code>, which is <code>{shiny}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shiny"><strong>???</strong></span>)</span> most commonly used template.
 If ever you want to use <code>navBarPage()</code>, this is where you will define this: replace one with the other, and you will be good to go.
 You can also define any other template page, for example with an <code>htmlTemplate()</code>.
 Keep in mind that removing the <code>fluidPage()</code> here implies that there is no available CSS/JS template to be used anymore, and you will need to be adding your own there.</p>
@@ -561,8 +561,8 @@ To know more about documentation and how to build it, here are some external lin
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
-<div id="ref-R-golem">
-<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+<div id="ref-R-usethis">
+<p>Wickham, Hadley, and Jennifer Bryan. 2020. <em>Usethis: Automate Package and Project Setup</em>. <a href="https://CRAN.R-project.org/package=usethis">https://CRAN.R-project.org/package=usethis</a>.</p>
 </div>
 </div>
 <hr/>
