--- a/planning.html
+++ b/planning.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -271,7 +271,7 @@ Splitting a Shiny project is made possible by following two techniques:</p>
 <ul>
 <li>Split your app into Shiny Modules, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features</li>
 </ul>
-<p><img src="img/app_tree.png" /><!-- --></p>
+<p><img src="img/app_tree.png" width="512" /></p>
 <ul>
 <li>Extract your core “non-reactive” functions, that we will also call the “business logic”, and include them in external files, so that you can work on these outside of the app.
 Working on independent static files to implement features will prevent you to relaunch the whole application every time you need to add something new.</li>
