--- a/setting-up-for-success-with-golem.html
+++ b/setting-up-for-success-with-golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="setting-up-for-success-with-golem" class="section level1">
 <h1><span class="header-section-number">Chapter 9</span> Setting up for success with <code>{golem}</code></h1>
-<p>Before starting to prototype and build anything, initialize a <code>{golem}</code> project!
+<p>Before starting to prototype and build anything, initialize a <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> project!
 This will help you put your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it!</p>
 <p>The general workflow for “prototype and build” is the following: the project manager sets up a <code>{golem}</code> project, where the first steps are filled, the general structure, with Shiny module, is set, and then the project is registered to the version control system.
 Once we have this structure, package and modules combined, we can start prototyping the UI inside the module, work on the CSS and JavaScript elements that might be needed, and prototyping the back-end functionalities inside Rmarkdown files.
@@ -249,7 +249,7 @@ These are the commands you will be using at</p>
 <span id="cb101-7"><a href="setting-up-for-success-with-golem.html#cb101-7"></a>  <span class="dt">author_email =</span> <span class="st">&quot;AUTHOR@MAIL.COM&quot;</span>, <span class="co"># Your Email</span></span>
 <span id="cb101-8"><a href="setting-up-for-success-with-golem.html#cb101-8"></a>  <span class="dt">repo_url =</span> <span class="ot">NULL</span> <span class="co"># The URL of the GitHub Repo (optional) </span></span>
 <span id="cb101-9"><a href="setting-up-for-success-with-golem.html#cb101-9"></a>)   </span></code></pre></div>
-<p>Then, call the <code>golem::set_golem_options()</code> function, it will add information to the <code>golem-config.yml</code> file, and notably set the <code>{here}</code> package root sentinel.</p>
+<p>Then, call the <code>golem::set_golem_options()</code> function, it will add information to the <code>golem-config.yml</code> file, and notably set the <code>{here}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-here"><strong>???</strong></span>)</span> package root sentinel.</p>
 </div>
 <div id="set-common-files" class="section level3">
 <h3><span class="header-section-number">9.2.2</span> Set common Files</h3>
