--- a/step-design.html
+++ b/step-design.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -249,7 +249,7 @@ Here are a non-exhaustive list of places you can look for if you are stuck/looki
 The idea with concept maps is to take a piece of paper (or a digital tool), where you draw all the concepts that come to mind for a specific topic, and all the relationships that link these concepts together.
 Drawing a concept map is a way to organize the knowledge of a specific topic.</p>
 <p>When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various “actors” (the concepts) around our app, with the relationships they have.
-For example, here is a very simple concept map of the <code>{hexmake}</code> app.</p>
+For example, here is a very simple concept map of the <code>{hexmake}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-hexmake"><strong>???</strong></span>)</span> app.</p>
 <p><img src="img/hexmakemap.png" /></p>
 <blockquote>
 <p>Built with XMind (<a href="https://www.xmind.net" class="uri">https://www.xmind.net</a>)</p>
