--- a/structure.html
+++ b/structure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-24" />
+<meta name="date" content="2020-04-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -195,7 +195,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="shiny-app-as-a-package" class="section level2">
 <h2><span class="header-section-number">3.1</span> Shiny App as a Package</h2>
 <p>Building a robust, maintenable and shareable Shiny application will be made possible by building an R package.</p>
-<p>In the next chapter you will be introduced to the <code>{golem}</code> package, which is <strong>an opinionated framework for building production-ready Shiny Applications</strong>—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.</p>
+<p>In the next chapter you will be introduced to the <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> package, which is <strong>an opinionated framework for building production-ready Shiny Applications</strong>—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.</p>
 <p>But in a world where Shiny Applications are mostly created as a series of files, why bother with a package?</p>
 <div id="what-is-in-a-production-grade-shiny-app" class="section level3">
 <h3><span class="header-section-number">3.1.1</span> What is in a production-grade Shiny App?</h3>
@@ -409,7 +409,7 @@ Also, how do you work smoothly in a context where you have to scroll from <code>
 </div>
 <div id="a-bite-sized-code-base" class="section level4">
 <h4><span class="header-section-number">3.2.1.2</span> A bite-sized code base</h4>
-<p>Build your application through multiple smaller application, easier to understand, develop and maintain, using shiny modules.</p>
+<p>Build your application through multiple smaller application, easier to understand, develop and maintain, using <code>{shiny}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shiny"><strong>???</strong></span>)</span> modules.</p>
 <p>We assume that you know the R saying that <em>“if you copy and paste something more than twice, you should make a function”</em>.
 Then, how do we refactor the partially repetitive piece of code so that it is reusable?</p>
 <p>Yes, you guessed right: using shiny modules.
@@ -518,7 +518,7 @@ As UI and server are functions, you can set parameters that will be used to conf
 
 &lt;button id=&quot;mod_ui_2-validate&quot; type=&quot;button&quot; class=&quot;btn btn-default action-button&quot;&gt;Validate Choice, again&lt;/button&gt;</code></pre>
 <p>The <strong>app_server</strong> side contains a series of <code>callModule(mod_server, unique_id, ...)</code>, also allowing additional parameters, just like any other function.</p>
-<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">b</a>)</span> Shiny application.</p>
+<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-tidytuesday201942"><strong>???</strong></span>)</span> Shiny application.</p>
 <p>This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, an a main panel with a button and the plot.
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments.</p>
 <div class="figure">
@@ -715,7 +715,7 @@ For example:</p>
 <p>Similarly to the “stratégie du petit r”, we can create an R6 object, which is passed along inside the modules.
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements.
-All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R">{hexmake}</a> application.</p>
+All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R"><code>{hexmake}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-hexmake"><strong>???</strong></span>)</span></a> application.</p>
 </div>
 </div>
 </div>
@@ -730,7 +730,7 @@ These components are not specific to your core business: you could use them for 
 This has no other use case than your interactive application: it is not meant to be used outside your app, you would not use them in a markdown report for instance.</p></li>
 <li><p>Business logic is the components with the core algorithms and functions that make your application specific to your area of work.
 You can recognize these elements as the ones that can be run outside any interactive context.
-This is the case for specific computation and algorithm, custom plot or <code>geom</code> for <code>{ggplot2}</code> <span class="citation">(Wickham <a href="#ref-ggplot22016" role="doc-biblioref">2016</a>)</span>, specific calls to a database, etc.</p></li>
+This is the case for specific computation and algorithm, custom plot or <code>geom</code> for <code>{ggplot2}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-ggplot2"><strong>???</strong></span>)</span>, specific calls to a database, etc.</p></li>
 </ul>
 <p>These two components do not have to live together.
 They should not live together if you want to keep your sanity when you build an app.</p>
@@ -864,15 +864,6 @@ Your app may not have that many functions, or maybe the functions can all fit in
 But be it one or thousands of files, it is always a good practice to stick to a formalized pattern.</p>
 
 </div>
-</div>
-</div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-R-tidytuesday201942">
-<p>Fay, Colin. 2020b. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
-</div>
-<div id="ref-ggplot22016">
-<p>Wickham, Hadley. 2016. <em>Ggplot2: Elegant Graphics for Data Analysis</em>. Springer-Verlag New York. <a href="https://ggplot2.tidyverse.org">https://ggplot2.tidyverse.org</a>.</p>
 </div>
 </div>
 <hr/>
